--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@ I am actively seeking opportunities to apply my expertise in AI-driven urban int
         <h3>Design Jam on Chennai Water – April 2025</h3>
         <p>Short description.</p>
         <ul class="project-links">
-          <li><a href="https://opencity.in/design-jam-on-chennai-water-april-2025/" target="_blank">Overview</a></li>
-          <li><a href="#" target="_blank">GitHub repo</a></li>
+          <li><a href="https://opencity.in/design-jam-on-chennai-water-april-2025/" target="_blank">DesignJam Overview</a></li>
+          <li><a href="DesignJam/index.html" target="_blank">Project Overview</a></li>
         </ul>
       </article>
 
